# sourcemap-indexer

./: .env  .gitignore  .sourcemapignore  CLAUDE.md  README.md  pyproject.toml
.docs/: architecture.yaml
.docs/issues/approved/: 1.md  10.md  14.md  16.md  5.md  9.md
.github/workflows/: ci.yml  mutation.yml
.semgrep/rules/: python-check-then-write-race.py  python-check-then-write-race.yaml  python-non-atomic-write.py  python-non-atomic-write.yaml  python-sqlite-no-begin-immediate.py  python-sqlite-no-begin-immediate.yaml  python-toctou-exists-then-read.py  python-toctou-exists-then-read.yaml
scripts/bash/: install-hook.sh
scripts/bash/hooks/: post-commit.sh  pre-commit.sh
scripts/python/: bench_walk.py
src/sourcemap_indexer/: cli.py  config.py
src/sourcemap_indexer/application/: enrich.py  import_context.py  sync.py  walk.py
src/sourcemap_indexer/cli/: __init__.py  _rendering.py  _shared.py  maintenance.py
src/sourcemap_indexer/cli/indexing/: enrich.py  init.py  sync.py  walk.py
src/sourcemap_indexer/cli/insights/: analysis.py  brief.py  chapters.py  contracts.py  doctor.py  profile.py  search.py  stats.py  validate.py
src/sourcemap_indexer/domain/: entities.py  repository.py  value_objects.py
src/sourcemap_indexer/infra/: claude_cli_provider.py  default_ignore.py  import_extractor.py  layers_config.py  llama_client.py  llm_client.py  llm_provider.py  migrator.py  project_config.py  sqlite_repo.py  walker.py
src/sourcemap_indexer/infra/config/: dotenv.py
src/sourcemap_indexer/lib/: either.py  llm_log.py  log.py
src/sourcemap_indexer/skill/: SKILL.md
tests/: test_cli.py  test_config.py  test_integration.py  test_rendering.py  test_smoke.py
tests/application/: test_enrich.py  test_enrich_ordering.py  test_import_context.py  test_sync.py  test_walk.py
tests/domain/: test_content_hash.py  test_item_entity.py  test_item_id.py  test_value_objects.py
tests/infra/: test_dotenv.py  test_hasher.py  test_import_extractor.py  test_layers_config.py  test_llama_client.py  test_llm_client.py  test_llm_provider.py  test_migrator.py  test_project_config.py  test_sqlite_repo.py  test_ts_import_extractor.py  test_walker.py
tests/lib/: test_llm_log.py  test_log.py
(+11 files in other folders)
